--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Launch Chrome from filesystem",
-            "file": "${workspaceFolder}/HTML.html"
+            "file": "${workspaceFolder}/Page.html"
         }
     ]
 }
