--- a/Python/.vscode/launch.json
+++ b/Python/.vscode/launch.json
@@ -4,11 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
-            "type": "pwa-chrome",
+            "name": "Python: Current File",
+            "type": "python",
             "request": "launch",
-            "name": "Launch Chrome from filesystem",
-            "file": "${workspaceFolder}/Page.html"
+            "program": "${workspaceFolder}/Game.py",
+            "console": "integratedTerminal"
         }
     ]
 }
