Added scenes and delta & elapsed time

--- a/CPlusPlus/CPlusPlus.vcxproj
+++ b/CPlusPlus/CPlusPlus.vcxproj
@@ -74,7 +74,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BeginScene.cpp" />
+    <ClCompile Include="EndScene.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MiddleScene.cpp" />
+    <ClCompile Include="Scene.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BeginScene.h" />
+    <ClInclude Include="EndScene.h" />
+    <ClInclude Include="MiddleScene.h" />
+    <ClInclude Include="Scene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
